--- a/exercises/ex1.4/workspace/example.ipynb
+++ b/exercises/ex1.4/workspace/example.ipynb
@@ -11,7 +11,7 @@
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import torchvision.transforms as transforms\n",
-    "from PIL import Image"
+    "from PIL import Image\n"
    ]
   },
   {
@@ -24,7 +24,7 @@
     "plt.figure(figsize=(8, 4))  # Adjust the figure size (width, height)\n",
     "plt.imshow(img)\n",
     "plt.axis('off')  # Turn off axis labels\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   },
   {
@@ -36,7 +36,7 @@
     "img = img.convert('L') # to greyscal\n",
     "# Convert to tensor\n",
     "transform = transforms.ToTensor()\n",
-    "img_tensor = transform(img).unsqueeze(0)  # Add batch dimension"
+    "img_tensor = transform(img).unsqueeze(0)  # Add batch dimension\n"
    ]
   },
   {
@@ -52,7 +52,7 @@
     "\n",
     "sobel_y = torch.tensor([[-1., -2., -1.], \n",
     "                        [ 0.,  0.,  0.], \n",
-    "                        [ 1.,  2.,  1.]]).unsqueeze(0).unsqueeze(0)  # Shape (1, 1, 3, 3)"
+    "                        [ 1.,  2.,  1.]]).unsqueeze(0).unsqueeze(0)  # Shape (1, 1, 3, 3)\n"
    ]
   },
   {
@@ -66,7 +66,7 @@
     "grad_y = F.conv2d(img_tensor, sobel_y, padding=1)\n",
     "\n",
     "# Compute the gradient magnitude\n",
-    "grad_magnitude = torch.sqrt(grad_x**2 + grad_y**2)"
+    "grad_magnitude = torch.sqrt(grad_x**2 + grad_y**2)\n"
    ]
   },
   {
@@ -76,7 +76,7 @@
    "outputs": [],
    "source": [
     "grad_img = transforms.ToPILImage()(grad_magnitude.squeeze(0))\n",
-    "plt.imshow(img, cmap='gray')"
+    "plt.imshow(grad_img, cmap='gray')\n"
    ]
   },
   {
